fix(final-audit): F1 MapCanvas-Resize-Loop, F2 Table-Guard, F3 Kampagnen-World-Guard, F6 400, Specs/Doku
- F1: usePixiApp resized auf clientWidth/Height (Border-Box verursachte endlose Canvas-Vergroesserung; Combat-Buttons 'not stable') — Kampf-E2E klickt wieder ohne force
- F2: DerivedValueService wertet nicht-numerische Tabellenzeilen als Fehler statt Exception (500 vermieden) + Test
- F3: CharacterSheetService.getSheet lehnt fremde Kampagne ab (WORLD_ACCESS_DENIED) + Test; ActionBar/StartCombatModal nutzen nur kampagnen der eigenen Welt
- F4: Kampf-E2E prueft Manoever-Response (AP 0) und beendet die Session im Cleanup
- F5: Save-Gate-Spec mit eindeutigem Namen; F6: Typ-Mismatch -> 400; F7: Doku-Korrekturen; F8 als Ticket notiert
- Tests: Backend 360->362, Frontend 168, E2E 7/7